Updated code to Lab04

--- a/Lab01_EFCore/Views/Category/Delete.cshtml
+++ b/Lab01_EFCore/Views/Category/Delete.cshtml
@@ -1,5 +1,5 @@
-﻿﻿@model Category
-<form asp-action="DeleteConfirmed" method="post">
+﻿@model Category
+    <form asp-action="DeleteConfirmed" method="post">
     <input type="hidden" asp-for="Id" />
     <h2>Xác nhận xóa Category</h2>
     <hr />
