--- a/Lab01_EFCore/Views/Home/Index.cshtml
+++ b/Lab01_EFCore/Views/Home/Index.cshtml
@@ -11,11 +11,22 @@
 @section Scripts{ 
 <script>
     let currentPage = 2;
-    $("#btnLoadMore").click(function () { loadPage(page); currentPage++; })
+    $("#btnLoadMore").click(function () {
+        loadPage(currentPage);
+        currentPage++;
+    });
     let loadPage = (page) => {
         $.ajax({
-            url: "/Home/LoadMore", data: { page: page }, success: function (data) { if ($.trim(data) === ' ') $("#btnLoadMore").hide(); else $(".product").append(data) }
-        })
+            url: '/Home/LoadMore',
+            data: { page: page },
+            success: function (data) {
+                if (data.length > 0) {
+                    $('.products').append(data);
+                } else {
+                    $('#btnLoadMore').hide();
+                }
+            }
+        });
     }
 </script>
 }
