--- a/Lab01_EFCore/Views/Category/Index.cshtml
+++ b/Lab01_EFCore/Views/Category/Index.cshtml
@@ -1,12 +1,38 @@
 ﻿@model List<Category>
-<partial name="_Notification" />
 <div class="row">
 	<div class="col-md-6">
-		<h2>LIST CATEGORY</h2>
+		<h2>Danh sách loại SP</h2>
 	</div>
 	<div class="col-md-6 text-end">
 		<a asp-action="Add" class="btn btn-primary">
-            <i class="bi bi-plus-circle"></i> Add New
+            <i class="bi bi-plus-circle"></i> Thêm mới
 		</a>
 	</div>
 </div>
+<table class="table table-bordered table-striped">
+    <thead>
+        <tr>
+            <th>Tên</th>
+            <th>Display Order</th>
+            <th> Hành động </th>
+        </tr>
+
+    </thead>
+    <tbody>
+        @foreach (var category in Model)
+        {
+            <tr>
+                <td>@category.Name</td>
+                <td>@category.DisplayOrder</td>
+                <td>
+                    <a asp-action="Update" asp-route-id="@category.Id" class="btn btn-success">
+                        <i class="bi bi-pencil-square"></i> Sửa
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@category.Id" class="btn btn-danger">
+                        <i class="bi bi-trash"></i> Xóa
+                    </a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
