--- a/Lab01_EFCore/Views/Category/Update.cshtml
+++ b/Lab01_EFCore/Views/Category/Update.cshtml
@@ -1,17 +1,18 @@
 ﻿@model Category
-<form asp-action="Add" method="post">
-    <h2>Add Category</h2>
+<form asp-action="Update" method="post">
+    <input type="hidden" asp-for="Id" />
+    <h2>Sửa Category</h2>
     <hr />
     <div class="form-group">
-        <label>Name</label>
+        <label>Tên</label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label>Display Order</label>
+        <label>Yêu cầu</label>
         <input asp-for="DisplayOrder" class="form-control" />
         <span asp-validation-for="DisplayOrder" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary"> Save </button>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <button type="submit" class="btn btn-primary"> Cập nhật (Sửa) </button>
+    <a asp-action="Index" class="btn btn-secondary"> Quay lại danh sách </a>
 </form>
