--- a/Lab01_EFCore/Views/Home/_ProductPartial.cshtml
+++ b/Lab01_EFCore/Views/Home/_ProductPartial.cshtml
@@ -1,5 +1,27 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@foreach (var p in Model)
+{
+<div class="card mb-3 col-md-3">
+    <h3 class="card-header">@p.Name</h3>
+    <div class="card-body">
+        <h5 class="card-title">Giá: @p.Price </h5>
+    </div>
+    @if (!string.IsNullOrEmpty(p.ImageUrl))
+    {
+        <img src="/@p.ImageUrl" class="img-fluid" />
+    }
+    else
+    {
+        <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+        </svg>
+    }
+    <div class="card-body">
+        <a href="#" class="card-link btn btn-outline-dark">Chi tiết</a>
+        <a href="#" class="card-link btn btn-outline-info">+ Giỏ hàng</a>
+    </div>
+    <div class="card-footer text-muted">
+        <h5 class="card-title">Loại: @p.Category.Name </h5>
+    </div>
+</div>
 }
