--- a/Lab01_EFCore/Views/Product/Add.cshtml
+++ b/Lab01_EFCore/Views/Product/Add.cshtml
@@ -5,28 +5,27 @@
 }
 @model Product
 <form asp-action="Add" method="post" enctype="multipart/form-data">
-    <h2>Add Product</h2>
+    <h2>Thêm sản phẩm</h2>
     <hr />
-
     <div class="row">
         <div class="col-md-12">
             <div class="form-group pb-2">
-                <label>Name</label>
+                <label>Tên SP</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group pb-2">
-                <label>Discription</label>
+                <label>Mô tả</label>
                     <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group pb-2">
-                <label>Price</label>
+                <label>Giá</label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group pb-2">
-                <label>Category</label>
+                <label>Loại SP</label>
                 <select asp-for="CategoryId" asp-items="@ViewBag.CategoryList" class="form-control">
                     <option disabled selected>Chọn loại sản phẩm</option>
                 </select>
@@ -38,6 +37,6 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary"> Save </button>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <button type="submit" class="btn btn-primary"> Lưu </button>
+    <a asp-action="Index" class="btn btn-secondary"> Quay lại danh sách</a>
 </form>
