--- a/Lab01_EFCore/Views/Product/Index.cshtml
+++ b/Lab01_EFCore/Views/Product/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿@model List<Product>
+    <partial name="_Notification" />
 <div class="row mb-4">
     <div class="col-md-6">
         <h2>Danh sách sản phẩm</h2>
     </div>
-    <div class="col-md6 text-right">
+    <div class="col-md-6 text-right">
         <a asp-action="Add" class="btn btn-primary">
             <i class="bi bi-plus-circle-fill"></i> Thêm sản phẩm
         </a>
