--- a/Lab01_EFCore/Views/Product/Update.cshtml
+++ b/Lab01_EFCore/Views/Product/Update.cshtml
@@ -20,7 +20,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group pb-2">
-                <label>Discription</label>
+                <label>Description</label>
                 <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
@@ -32,7 +32,7 @@
             <div class="form-group pb-2">
                 <label>Category</label>
                 <select asp-for="CategoryId" asp-items="@ViewBag.CategoryList" class="form-control">
-                    <option disabled selected>==Select category===</option>
+                    <option disabled selected>Chọn loại sản phẩm</option>
                 </select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
