--- a/Lab01_EFCore/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Lab01_EFCore/Areas/Identity/Pages/Account/Register.cshtml
@@ -37,6 +37,10 @@
                 <input asp-for="Input.Birthday" class="form-control" />
                 <span asp-validation-for="Input.Birthday" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.Role"></label>
+                <select asp-for="Input.Role" class="form-control" asp-items="@Model.Input.RoleList"></select>
+            </div>
             <button type="submit" class="btn btn-primary">Đăng ký</button>
         </form>
     </div>
