--- a/Lab01_EFCore/Views/Shared/_Layout.cshtml
+++ b/Lab01_EFCore/Views/Shared/_Layout.cshtml
@@ -18,17 +18,20 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between text-bg-warning" id="navbarColor02">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
+                            <a class="nav-link text-dark" asp-area="Customer" asp-controller="Home" asp-action="Index">Trang chủ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Chính sách</a>
+                            <a class="nav-link text-dark" asp-area="Customer" asp-controller="Product" asp-action="Index">Sản phẩm</a>
                         </li>
+                        @if (User.IsInRole(SD.Role_Admin))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">Quản lý sản phẩm</a>
+                            </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Quản lý sản phẩm</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Quản lý loại sản phẩm</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Quản lý loại sản phẩm</a>
-                        </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
