Fully updated Lab05. Unfinished Lab06-2

--- a/Lab01_EFCore/Areas/Customer/Views/Home/Index.cshtml
+++ b/Lab01_EFCore/Areas/Customer/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     });
     let loadPage = (page) => {
         $.ajax({
-            url: 'Customer/Home/LoadMore',
+            url: '/Customer/Home/LoadMore',
             data: { page: page },
             success: function (data) {
                 if (data.length > 0) {
