--- a/Lab01_EFCore/Areas/Customer/Views/Home/_ProductPartial.cshtml
+++ b/Lab01_EFCore/Areas/Customer/Views/Home/_ProductPartial.cshtml
@@ -7,7 +7,7 @@
     </div>
     @if (!string.IsNullOrEmpty(product.ImageUrl))
     {
-        <img src="@product.ImageUrl" class="img-fluid" />
+        <img src="/@product.ImageUrl" class="img-fluid" />
     }
     else
     {
@@ -18,7 +18,7 @@
     }
     <div class="card-body">
         <a href="#" class="card-link btn btn-outline-dark">Chi tiết</a>
-        <a href="#" class="card-link btn btn-outline-info">+ Giỏ hàng</a>
+        <a class="addtocart card-link btn btn-outline-info" data-productId="@product.Id" asp-action="AddToCart" asp-controller="Cart" asp-route-productId="@product.Id">Thêm vào giỏ hàng</a>
     </div>
 </div>
 }
