--- a/Lab01_EFCore/Areas/Customer/Views/Product/Index.cshtml
+++ b/Lab01_EFCore/Areas/Customer/Views/Product/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="container mt-4">
     <div class="row">
         <div class="col-md-3">
-            <h5>CATEGORY LIST</h5>
+            <h5>THỂ LOẠI SẢN PHẨM</h5>
             <ul class="list-group">
                 @foreach (var category in (List<CategoryViewModel>)ViewBag.Categories)
                 {
@@ -11,7 +11,7 @@
             </ul>
         </div>
         <div class="col-md-9">
-            <h5 class="text-uppercase">PRODUCT LIST</h5>
+            <h5 class="text-uppercase">DANH SÁCH SẢN PHẨM</h5>
             <div id="product-list">
                 <partial name="_ProductListPartial" />
             </div>
