--- a/Lab01_EFCore/Areas/Customer/Views/Cart/Index.cshtml
+++ b/Lab01_EFCore/Areas/Customer/Views/Cart/Index.cshtml
@@ -66,8 +66,8 @@
                             <p class="mb-2 fw-bold">@string.Format("${0:#,##0}", Model.Total)</p>
                         </div>
                         <div class="mt-3">
-                            <a href="#" class="btn btn-success w-100 shadow-0 mb-2"> Thanh toán </a>
-                            <a href="/customer" class="btn btn-light w-100 border mt-2"> Quay lại cửa hàng </a>
+                            <a asp-action="ProcessOrder" asp-controller="Order" class="btn btn-success w-100 shadow-0 mb-2"> Thanh toán </a>
+                            <a href="/Customer" class="btn btn-light w-100 border mt-2"> Quay lại cửa hàng </a>
                         </div>
                     </div>
                 </div>
